Updated Banner and fixed homepage overflow

--- a/jamalyzer-client/styles/home/HomeRecommended.module.css
+++ b/jamalyzer-client/styles/home/HomeRecommended.module.css
@@ -15,6 +15,6 @@
   justify-content: center;
   gap: 3rem;
 
-  width: 100vw;
+  width: 95vw;
   max-width: 150rem;
 }
